Collection API Улучшения[#186698]