@@ -14,12 +14,10 @@ public class ConvertListTest {
     @Test
     public void when2ArraysInList() {
 
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
         List<Integer> result = ConvertList.convert(list);
 
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expect));
     }
 }
